Letzte Anpassungen wurden vorgenommen. Es wurden Fehler behoben und das Aussehen der GUI angepasst.

--- a/src/main/resources/com/zst/autovermietung/auto-add-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/auto-add-screen.fxml
@@ -4,10 +4,12 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="437.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.AutoAddScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="416.0" prefWidth="437.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.AutoAddScreenController">
    <children>
       <Label layoutX="113.0" layoutY="34.0" prefHeight="30.0" prefWidth="213.0" text="Neue Auto hinzufügen" textFill="#214565" AnchorPane.leftAnchor="112.0" AnchorPane.rightAnchor="112.0">
          <font>
@@ -50,7 +52,14 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="294.0" layoutY="415.0" mnemonicParsing="false" onAction="#autoAddButton" text="hinzufügen" />
+      <Button layoutX="290.0" layoutY="362.0" mnemonicParsing="false" onAction="#autoAddButton">
+         <graphic>
+            <ImageView fitHeight="23.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/save.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <Label layoutX="46.0" layoutY="332.0" text="ist verfügbar?">
          <font>
             <Font size="14.0" />
