--- a/src/main/resources/com/zst/autovermietung/auto-edit.fxml
+++ b/src/main/resources/com/zst/autovermietung/auto-edit.fxml
@@ -11,42 +11,42 @@
 
 <AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="398.0" prefWidth="312.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.AutoEditController">
    <children>
-      <ImageView fitHeight="134.0" fitWidth="232.0" layoutX="89.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="104.0" fitWidth="115.0" layoutX="104.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/caricon.png" />
          </image>
       </ImageView>
-      <Label fx:id="markemodellLabel" alignment="CENTER" layoutX="-3.0" layoutY="181.0" prefHeight="19.0" prefWidth="312.0" text="Marke Modell  ">
+      <Label fx:id="markemodellLabel" alignment="CENTER" layoutX="2.0" layoutY="152.0" prefHeight="19.0" prefWidth="312.0" text="Marke Modell  ">
          <font>
-            <Font size="13.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-      <Label fx:id="jahrLabel" alignment="CENTER" layoutX="-3.0" layoutY="200.0" prefHeight="19.0" prefWidth="312.0" text="Jahr">
+      <Label fx:id="jahrLabel" alignment="CENTER" layoutX="2.0" layoutY="171.0" prefHeight="19.0" prefWidth="312.0" text="Jahr">
          <font>
-            <Font size="13.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutX="-3.0" layoutY="234.0" prefHeight="19.0" prefWidth="154.0" text="Mietepreis:">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </Label>
-      <Label alignment="CENTER_RIGHT" layoutX="-3.0" layoutY="257.0" prefHeight="19.0" prefWidth="154.0" text="Farbe:">
+      <Label alignment="CENTER_RIGHT" layoutX="1.0" layoutY="209.0" prefHeight="19.0" prefWidth="154.0" text="Mietepreis:">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutX="-3.0" layoutY="281.0" prefHeight="19.0" prefWidth="154.0" text="Kilometerstand:">
+      <Label alignment="CENTER_RIGHT" layoutX="1.0" layoutY="238.0" prefHeight="19.0" prefWidth="154.0" text="Farbe:">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutX="-2.0" layoutY="304.0" prefHeight="19.0" prefWidth="154.0" text="Getriebetyp:">
+      <Label alignment="CENTER_RIGHT" layoutX="2.0" layoutY="267.0" prefHeight="19.0" prefWidth="154.0" text="Kilometerstand:">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutX="-3.0" layoutY="332.0" prefHeight="19.0" prefWidth="154.0" text="Verfügbarkeit:">
+      <Label alignment="CENTER_RIGHT" layoutY="296.0" prefHeight="19.0" prefWidth="154.0" text="Getriebetyp:">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER_RIGHT" layoutX="-1.0" layoutY="324.0" prefHeight="19.0" prefWidth="154.0" text="Verfügbarkeit:">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -60,27 +60,27 @@
             </ImageView>
          </graphic>
       </Button>
-      <TextField fx:id="mieteField" layoutX="161.0" layoutY="233.0" prefHeight="22.0" prefWidth="115.0">
+      <TextField fx:id="mieteField" layoutX="165.0" layoutY="208.0" prefHeight="22.0" prefWidth="115.0">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <TextField fx:id="farbeField" layoutX="161.0" layoutY="256.0" prefHeight="22.0" prefWidth="115.0">
+      <TextField fx:id="farbeField" layoutX="165.0" layoutY="237.0" prefHeight="22.0" prefWidth="115.0">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <TextField fx:id="kmField" layoutX="161.0" layoutY="279.0" prefHeight="22.0" prefWidth="115.0">
+      <TextField fx:id="kmField" layoutX="165.0" layoutY="265.0" prefHeight="22.0" prefWidth="115.0">
          <font>
             <Font size="10.0" />
          </font>
       </TextField>
-      <ChoiceBox fx:id="verfugbarChoice" layoutX="161.0" layoutY="329.0" prefHeight="0.0" prefWidth="115.0" />
-      <Label fx:id="nummernschildLabel" alignment="CENTER" layoutY="148.0" prefHeight="22.0" prefWidth="312.0" text="Nummernschild">
+      <ChoiceBox fx:id="verfugbarChoice" layoutX="163.0" layoutY="321.0" prefHeight="0.0" prefWidth="115.0" />
+      <Label fx:id="nummernschildLabel" alignment="CENTER" layoutX="-1.0" layoutY="124.0" prefHeight="22.0" prefWidth="312.0" text="Nummernschild">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="17.0" />
          </font>
       </Label>
-      <ChoiceBox fx:id="typChoice" layoutX="161.0" layoutY="301.0" prefHeight="0.0" prefWidth="115.0" />
+      <ChoiceBox fx:id="typChoice" layoutX="163.0" layoutY="293.0" prefHeight="0.0" prefWidth="115.0" />
    </children>
 </AnchorPane>
