--- a/src/main/resources/com/zst/autovermietung/kunde-add-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/kunde-add-screen.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -58,7 +60,14 @@
       <TextField fx:id="nameText" layoutX="37.0" layoutY="182.0" />
       <TextField fx:id="nachnameText" layoutX="219.0" layoutY="182.0" />
       <TextField fx:id="trIdText" layoutX="37.0" layoutY="111.0" />
-      <Button layoutX="323.0" layoutY="426.0" mnemonicParsing="false" onAction="#addKundeButton" text="hinzufügen" />
+      <Button layoutX="349.0" layoutY="413.0" mnemonicParsing="false" onAction="#addKundeButton">
+         <graphic>
+            <ImageView fitHeight="22.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/save.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <ChoiceBox fx:id="geschlechtChoice" layoutX="220.0" layoutY="324.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="219.0" layoutY="304.0" text="Geschlecht">
          <font>
