--- a/src/main/resources/com/zst/autovermietung/kunde-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/kunde-screen.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -12,15 +13,40 @@
    <children>
       <Label layoutX="27.0" layoutY="21.0" text="Kunde-Verwaltung" textFill="#101861">
          <font>
-            <Font size="18.0" />
+            <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="kundeAddButton" layoutX="26.0" layoutY="59.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="149.0" text="neue Kunde hinzufügen" />
-      <ScrollPane layoutX="26.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
+      <Button fx:id="kundeAddButton" layoutX="270.0" layoutY="59.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="149.0" text="neue Kunde hinzufügen" />
+      <ScrollPane layoutX="26.0" layoutY="123.0" prefHeight="313.0" prefWidth="640.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
          <content>
-            <VBox fx:id="kundenList" fillWidth="false" prefHeight="327.0" prefWidth="638.0" />
+            <VBox fx:id="kundenList" fillWidth="false" prefHeight="309.0" prefWidth="638.0" />
          </content>
       </ScrollPane>
-      <CheckBox fx:id="checkbox" layoutX="529.0" layoutY="77.0" mnemonicParsing="false" onAction="#change" text="Kunde mit Vorstrafen" />
+      <CheckBox fx:id="checkbox" layoutX="529.0" layoutY="64.0" mnemonicParsing="false" onAction="#change" text="Kunde mit Vorstrafen" />
+      <HBox layoutX="25.0" layoutY="95.0" prefHeight="27.0" prefWidth="640.0" style="-fx-background-color: #466289;">
+         <children>
+            <Label prefHeight="18.0" prefWidth="36.0" />
+            <Label fx:id="idLabel" alignment="CENTER" prefHeight="42.0" prefWidth="118.0" text="TC-IDNUMMER" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="fullnameLabel" alignment="CENTER" prefHeight="42.0" prefWidth="156.0" text="Name" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="telefonnummerLabel" alignment="CENTER" prefHeight="42.0" prefWidth="124.0" text="Telefonnummer" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="hatAutoLabel" alignment="CENTER" prefHeight="42.0" prefWidth="69.0" text="hatauto" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
