--- a/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -12,16 +13,51 @@
    <children>
       <Label layoutX="34.0" layoutY="24.0" text="Mietvertrag-Verwaltung" textFill="#101861">
          <font>
-            <Font size="18.0" />
+            <Font size="20.0" />
          </font>
       </Label>
       <Button fx:id="mietvertragAddButton" layoutX="34.0" layoutY="67.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="162.0" text="neue Mietvertrag schließen" />
       <Button layoutX="263.0" layoutY="67.0" mnemonicParsing="false" onAction="#abgelaufendeMietvertrage" prefHeight="27.0" prefWidth="162.0" text="abgelaufene Mietverträge" />
-      <ScrollPane layoutX="25.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0">
+      <ScrollPane layoutX="25.0" layoutY="134.0" prefHeight="302.0" prefWidth="639.0">
          <content>
-            <VBox fx:id="mietvertragList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
+            <VBox fx:id="mietvertragList" fillWidth="false" prefHeight="299.0" prefWidth="636.0" />
          </content>
       </ScrollPane>
-      <CheckBox fx:id="problem" layoutX="504.0" layoutY="72.0" mnemonicParsing="false" onAction="#change" text="Mietverträge mit Problem" />
+      <CheckBox fx:id="problem" layoutX="557.0" layoutY="59.0" mnemonicParsing="false" onAction="#change" prefHeight="42.0" prefWidth="106.0" text="Mietverträge mit Problem" wrapText="true" />
+      <CheckBox fx:id="bezahlt" layoutX="450.0" layoutY="59.0" mnemonicParsing="false" onAction="#bezahlteChange" prefHeight="42.0" prefWidth="93.0" text="bezahlte Mietverträge" wrapText="true" />
+      <HBox layoutX="25.0" layoutY="111.0" prefHeight="20.0" prefWidth="638.0" style="-fx-background-color: #466289;">
+         <children>
+            <Label fx:id="vertragidLabel" alignment="CENTER" prefHeight="20.0" prefWidth="55.0" text="ID" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="kundeLabel" alignment="CENTER" prefHeight="30.0" prefWidth="98.0" text="Kunde-ID" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="nschildLabel" alignment="CENTER" prefHeight="62.0" prefWidth="106.0" text="Nummernschild" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="startdatumLabel" alignment="CENTER" prefHeight="62.0" prefWidth="106.0" text="Startdatum" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="enddatumLabel" alignment="CENTER" prefHeight="62.0" prefWidth="106.0" text="Enddatum" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="bezahlt1" alignment="CENTER" prefHeight="30.0" prefWidth="62.0" text="istBezahlt?" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
