--- a/src/main/resources/com/zst/autovermietung/mitarbeiter-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/mitarbeiter-screen.fxml
@@ -4,21 +4,47 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="mitarbeiterScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="690.0" style="-fx-background-color: #EAEFF3;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.MitarbeiterScreenController">
    <children>
-      <ScrollPane layoutX="25.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0">
+      <ScrollPane layoutX="25.0" layoutY="124.0" prefHeight="312.0" prefWidth="639.0">
          <content>
-            <VBox fx:id="mitarbeiterList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
+            <VBox fx:id="mitarbeiterList" fillWidth="false" prefHeight="310.0" prefWidth="636.0" />
          </content>
       </ScrollPane>
-      <Button fx:id="mitarbeiterAddButton" layoutX="139.0" layoutY="72.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="180.0" text="neue Mitarbeiter hinzufügen" />
-      <Label layoutX="44.0" layoutY="34.0" text="Mitarbeiter-Verwaltung" textFill="#101861">
+      <Button fx:id="mitarbeiterAddButton" layoutX="255.0" layoutY="66.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="180.0" text="neue Mitarbeiter hinzufügen" />
+      <Label layoutX="25.0" layoutY="27.0" text="Mitarbeiter-Verwaltung" textFill="#101861">
          <font>
-            <Font size="18.0" />
+            <Font size="20.0" />
          </font>
       </Label>
+      <HBox layoutX="25.0" layoutY="102.0" prefHeight="21.0" prefWidth="639.0" style="-fx-background-color: #466289;">
+         <children>
+            <Label prefHeight="18.0" prefWidth="36.0" />
+            <Label fx:id="idLabel" alignment="CENTER" prefHeight="42.0" prefWidth="133.0" text="TC-ID" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="fullnameLabel" alignment="CENTER" prefHeight="42.0" prefWidth="168.0" text="Name" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="telefonnummerLabel" alignment="CENTER" prefHeight="42.0" prefWidth="124.0" text="Telefonnummer" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="bnameLabel" alignment="CENTER" prefHeight="42.0" prefWidth="86.0" text="Benutzername" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
