--- a/src/main/resources/com/zst/autovermietung/settings-manager.fxml
+++ b/src/main/resources/com/zst/autovermietung/settings-manager.fxml
@@ -12,17 +12,17 @@
 
 <AnchorPane fx:id="firstHomeScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="690.0" style="-fx-background-color: #EAEFF3;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.SettingsManagerController">
    <children>
-      <Button fx:id="passButton" layoutX="424.0" layoutY="105.0" mnemonicParsing="false" onAction="#passwortAndern" prefHeight="27.0" prefWidth="115.0" text="Passwort ändern">
+      <Button fx:id="passButton" layoutX="423.0" layoutY="97.0" mnemonicParsing="false" onAction="#passwortAndern" prefHeight="27.0" prefWidth="115.0" text="Passwort ändern">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <Button fx:id="bnButton" layoutX="406.0" layoutY="281.0" mnemonicParsing="false" onAction="#benutzernameAndern" prefHeight="27.0" prefWidth="150.0" text="Benutzername ändern" textAlignment="CENTER" wrapText="true">
+      <Button fx:id="bnButton" layoutX="408.0" layoutY="276.0" mnemonicParsing="false" onAction="#benutzernameAndern" prefHeight="27.0" prefWidth="150.0" text="Benutzername ändern" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="13.0" />
          </font>
       </Button>
-      <AnchorPane fx:id="passPane" layoutX="367.0" layoutY="133.0" prefHeight="125.0" prefWidth="230.0">
+      <AnchorPane fx:id="passPane" layoutX="366.0" layoutY="125.0" prefHeight="125.0" prefWidth="230.0">
          <children>
             <Label layoutX="25.0" layoutY="14.0" text="Geben Sie neue Passwort ein:">
                <font>
@@ -44,7 +44,7 @@
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="bnpane" layoutX="374.0" layoutY="301.0" prefHeight="126.0" prefWidth="230.0">
+      <AnchorPane fx:id="bnpane" layoutX="376.0" layoutY="296.0" prefHeight="126.0" prefWidth="230.0">
          <children>
             <Label layoutX="9.0" layoutY="20.0" text="Geben Sie neue Benutzername ein:">
                <font>
@@ -68,14 +68,14 @@
       </AnchorPane>
       <AnchorPane fx:id="paneInfos" layoutX="31.0" layoutY="61.0" prefHeight="361.0" prefWidth="264.0">
          <children>
-            <Label layoutX="11.0" layoutY="98.0" prefHeight="18.0" prefWidth="87.0" text="TR-ID:">
+            <Label alignment="CENTER_RIGHT" layoutX="17.0" layoutY="98.0" prefHeight="18.0" prefWidth="87.0" text="TR-ID:">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
             <Label fx:id="nameLabel" alignment="CENTER" layoutX="23.0" layoutY="14.0" prefHeight="47.0" prefWidth="218.0" text="NAME + NACHNAME" textAlignment="CENTER" textFill="#101861" wrapText="true">
                <font>
-                  <Font size="16.0" />
+                  <Font name="System Bold" size="16.0" />
                </font>
             </Label>
             <Label fx:id="rolleLabel" alignment="CENTER" layoutX="23.0" layoutY="61.0" prefHeight="18.0" prefWidth="218.0" text="Rolle" textAlignment="CENTER">
@@ -83,12 +83,12 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="8.0" layoutY="171.0" prefHeight="19.0" prefWidth="106.0" text="Geburtsdatum: ">
+            <Label alignment="CENTER_RIGHT" layoutX="5.0" layoutY="171.0" prefHeight="19.0" prefWidth="106.0" text="Geburtsdatum: ">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="8.0" layoutY="209.0" prefHeight="18.0" prefWidth="87.0" text="Geschlecht:">
+            <Label alignment="CENTER_RIGHT" layoutX="17.0" layoutY="209.0" prefHeight="18.0" prefWidth="87.0" text="Geschlecht:">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -98,7 +98,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <Label fx:id="idLabel" layoutX="124.0" layoutY="99.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
+            <Label fx:id="idLabel" layoutX="124.0" layoutY="98.0" prefHeight="18.0" prefWidth="106.0" text="TR-ID:">
                <font>
                   <Font size="13.0" />
                </font>
@@ -123,7 +123,7 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <Label layoutX="11.0" layoutY="134.0" prefHeight="19.0" prefWidth="94.0" text="Benutzername:">
+            <Label alignment="CENTER_RIGHT" layoutX="11.0" layoutY="134.0" prefHeight="19.0" prefWidth="94.0" text="Benutzername:">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
@@ -133,31 +133,31 @@
                   <Font size="13.0" />
                </font>
             </Label>
-            <Label layoutX="8.0" layoutY="245.0" prefHeight="19.0" prefWidth="106.0" text="Telefonnummer:">
+            <Label layoutX="5.0" layoutY="245.0" prefHeight="19.0" prefWidth="106.0" text="Telefonnummer:">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="8.0" layoutY="282.0" prefHeight="18.0" prefWidth="87.0" text="Adress:">
+            <Label alignment="CENTER_RIGHT" layoutX="17.0" layoutY="282.0" prefHeight="18.0" prefWidth="87.0" text="Adress:">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Button layoutX="52.0" layoutY="320.0" mnemonicParsing="false" onAction="#editInfos" prefHeight="27.0" prefWidth="17.0">
+            <Button layoutX="40.0" layoutY="320.0" mnemonicParsing="false" onAction="#editInfos" prefHeight="27.0" prefWidth="17.0">
                <font>
                   <Font size="13.0" />
                </font>
                <graphic>
                   <ImageView fitHeight="19.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@images/icons8-edit-48%20-%20Kopya.png" />
+                        <Image url="@images/icons8-edit-48 - Kopya.png" />
                      </image>
                   </ImageView>
                </graphic>
             </Button>
          </children>
       </AnchorPane>
-      <Label layoutX="263.0" layoutY="29.0" prefHeight="32.0" prefWidth="162.0" text="Persönliche Daten" textFill="#101861">
+      <Label layoutX="264.0" layoutY="20.0" prefHeight="32.0" prefWidth="162.0" text="Persönliche Daten" textFill="#101861">
          <font>
             <Font size="20.0" />
          </font>
